# SBAF

./: CMakeLists.txt
batch/: run.sh  run_cent.sh
macro/: FillQA.C  InputFromBotvina.C  SampleGlauberEvent.C
src/: AnisotropyVector.cpp  AnisotropyVector.h  Event.cpp  Event.h  Fragment.cpp  Fragment.h  QA.cpp  QA.h  SBAFLinkDef.h
